--- a/SimpleProject/Views/Base.lproj/Main.storyboard
+++ b/SimpleProject/Views/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oem-0T-AjK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oem-0T-AjK">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Список лекарст-->
+        <!--Список лекарств-->
         <scene sceneID="PDa-eh-EFY">
             <objects>
                 <tableViewController id="xSW-xS-qqU" customClass="ListViewController" customModule="SimpleProject" customModuleProvider="target" sceneMemberID="viewController">
@@ -34,16 +34,17 @@
                             <outlet property="delegate" destination="xSW-xS-qqU" id="aDT-UE-ljW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Список лекарст" id="maf-sZ-tRe"/>
+                    <navigationItem key="navigationItem" title="Список лекарств" id="maf-sZ-tRe"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mD2-do-6lf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="213" y="196"/>
+            <point key="canvasLocation" x="173" y="680"/>
         </scene>
         <!--Drugs Tab Bar Controller-->
         <scene sceneID="c5k-Dg-xnw">
             <objects>
                 <tabBarController id="oem-0T-AjK" customClass="DrugsTabBarController" customModule="SimpleProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="fKI-h9-0hZ"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2TI-st-uFW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -52,6 +53,7 @@
                     <connections>
                         <segue destination="YTd-Kc-3LI" kind="relationship" relationship="viewControllers" id="VCh-2i-efQ"/>
                         <segue destination="CHn-mC-UYV" kind="relationship" relationship="viewControllers" id="O2J-kb-3Eb"/>
+                        <segue destination="pV6-0b-gdh" kind="relationship" relationship="viewControllers" id="WFN-tu-utF"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gmP-Ge-iNI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -246,6 +248,83 @@
             </objects>
             <point key="canvasLocation" x="-649.27536231884062" y="-505.58035714285711"/>
         </scene>
+        <!--TeamViewController-->
+        <scene sceneID="RrH-0j-GbU">
+            <objects>
+                <viewController title="TeamViewController" id="Jrr-C8-9k1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dhe-Tr-1MH">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="team" translatesAutoresizingMaskIntoConstraints="NO" id="zNl-AQ-Ooi">
+                                <rect key="frame" x="-106" y="448" width="626" height="0.0"/>
+                                <constraints>
+                                    <constraint firstItem="dhe-Tr-1MH" firstAttribute="height" secondItem="zNl-AQ-Ooi" secondAttribute="height" multiplier="2:3" id="hb1-75-CNw"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="330" translatesAutoresizingMaskIntoConstraints="NO" id="oiH-v9-pr7">
+                                <rect key="frame" x="59" y="236" width="296" height="424"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Команда:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GuL-h7-bhO">
+                                        <rect key="frame" x="100" y="20" width="96" height="29"/>
+                                        <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Car-2Y-aG6">
+                                        <rect key="frame" x="20" y="352" width="256" height="52"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ярослав Венгерский - тимлид " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6c-wH-V3e">
+                                                <rect key="frame" x="0.0" y="0.0" width="256" height="22"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Кугенева " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4m-Au-k4J">
+                                                <rect key="frame" x="40.5" y="30" width="175" height="22"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="KRZ-h2-xqV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zNl-AQ-Ooi" firstAttribute="centerX" secondItem="dhe-Tr-1MH" secondAttribute="centerX" id="HzP-e5-gnb"/>
+                            <constraint firstItem="zNl-AQ-Ooi" firstAttribute="centerY" secondItem="dhe-Tr-1MH" secondAttribute="centerY" id="WmQ-Bn-QvN"/>
+                            <constraint firstItem="oiH-v9-pr7" firstAttribute="centerY" secondItem="dhe-Tr-1MH" secondAttribute="centerY" id="pdf-ua-3vt"/>
+                            <constraint firstItem="oiH-v9-pr7" firstAttribute="centerX" secondItem="dhe-Tr-1MH" secondAttribute="centerX" id="zLx-1I-Wzw"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="tTG-j3-wvw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PAp-yk-U3O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-163" y="1913"/>
+        </scene>
+        <!--Инфо-->
+        <scene sceneID="pRD-b3-qIc">
+            <objects>
+                <navigationController id="pV6-0b-gdh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Инфо" image="person.3" catalog="system" selectedImage="person.3" id="51d-YQ-4eZ"/>
+                    <navigationItem key="navigationItem" id="2Fs-gr-SxV"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Phi-c4-N7W">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Jrr-C8-9k1" kind="relationship" relationship="rootViewController" id="JIT-wy-Y5l"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qwf-Nd-auh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1484" y="775"/>
+        </scene>
         <!--Список-->
         <scene sceneID="ZeD-6u-I5K">
             <objects>
@@ -276,6 +355,8 @@
         <image name="list.bullet.rectangle.fill" catalog="system" width="128" height="93"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="magnifyingglass.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="person.3" catalog="system" width="128" height="62"/>
+        <image name="team" width="626" height="939"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
